--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -8,10 +8,10 @@
     tools:context=".SignInActivity">
 
     <ImageView
-        android:layout_marginTop="36dp"
         android:id="@+id/iv_MainLogo"
         android:layout_width="250dp"
         android:layout_height="150dp"
+        android:layout_marginTop="36dp"
         android:src="@drawable/android_original"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,6 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:hint="비밀번호를 입력하세요."
+        android:inputType="textPassword"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
