--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUpActivity"
-    android:padding="36dp">
+    android:padding="36dp"
+    tools:context=".SignUpActivity">
 
 
     <ImageView
-        android:layout_marginTop="24dp"
         android:id="@+id/iv_MainLogo"
         android:layout_width="200dp"
         android:layout_height="120dp"
+        android:layout_marginTop="24dp"
         android:src="@drawable/signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,75 +20,67 @@
 
     <TextView
         android:id="@+id/tv_Name_Title"
+        style="@style/TextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:gravity="start"
         android:text="@string/signUpNameTitle"
-        android:textSize="20sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_MainLogo" />
 
     <EditText
         android:id="@+id/et_Name"
+        style="@style/EditTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:hint="@string/signUpNameHint"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_Name_Title" />
 
 
-
     <TextView
         android:id="@+id/tv_Id_Title"
+        style="@style/TextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:gravity="start"
         android:text="@string/IdTitle"
-        android:textSize="20sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_Name"
-         />
+        app:layout_constraintTop_toBottomOf="@id/et_Name" />
 
     <EditText
         android:id="@+id/et_Id"
+        style="@style/EditTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:hint="@string/IdHint"
-        android:textStyle="bold"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_Id_Title" />
 
     <TextView
         android:id="@+id/tv_Password_Title"
+        style="@style/TextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:gravity="start"
         android:text="@string/PasswordTitle"
-        android:textSize="20sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_Id" />
 
     <EditText
         android:id="@+id/et_Password"
+        style="@style/EditTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:hint="@string/PasswordHint"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_Password_Title" />
@@ -103,9 +95,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_Password"
-        app:layout_goneMarginTop="16dp"
-        />
-
+        app:layout_goneMarginTop="16dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
