--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,35 +10,12 @@
 
     <ImageView
         android:id="@+id/iv_MainLogo"
-        android:layout_width="200dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="150dp"
+        android:layout_height="100dp"
         android:src="@drawable/signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_Name_Title"
-        style="@style/TextStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:text="@string/signUpNameTitle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_MainLogo" />
-
-    <EditText
-        android:id="@+id/et_Name"
-        style="@style/EditTextStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/signUpNameHint"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_Name_Title" />
-
 
     <TextView
         android:id="@+id/tv_Id_Title"
@@ -46,34 +23,84 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:gravity="start"
         android:text="@string/IdTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_Name" />
+        app:layout_constraintTop_toBottomOf="@id/iv_MainLogo" />
 
     <EditText
+
         android:id="@+id/et_Id"
         style="@style/EditTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:hint="@string/IdHint"
+        app:layout_constraintEnd_toEndOf="@+id/tv_Id_Title"
+        app:layout_constraintStart_toStartOf="@+id/tv_Id_Title"
+        app:layout_constraintTop_toBottomOf="@id/tv_Id_Title" />
 
+    <TextView
+        android:id="@+id/tv_Email_Title"
+        style="@style/TextStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:text="@string/EmailTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_Id_Title" />
+        app:layout_constraintTop_toBottomOf="@id/et_Id" />
+
+    <EditText
+        app:layout_constraintHorizontal_weight="1"
+        android:id="@+id/et_Email"
+        style="@style/EditTextStyle"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@id/et_EmailForm"
+        android:hint="@string/EmailHint"
+        android:inputType="textEmailAddress"
+        app:layout_constraintStart_toStartOf="@+id/tv_Email_Title"
+        app:layout_constraintTop_toBottomOf="@id/tv_Email_Title" />
+
+    <EditText
+        app:layout_constraintEnd_toStartOf="@id/spinner"
+        android:id="@+id/et_EmailForm"
+        style="@style/EditTextStyle"
+        android:layout_width="100dp"
+        app:layout_constraintHorizontal_weight="1"
+        android:layout_height="wrap_content"
+        android:hint="@string/EmailFormHint"
+        android:inputType="textEmailAddress"
+        app:layout_constraintStart_toEndOf="@id/et_Email"
+        app:layout_constraintTop_toTopOf="@id/et_Email"
+        app:layout_constraintBaseline_toBaselineOf="@id/et_Email"
+        />
+
+    <Spinner
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toEndOf="@id/et_EmailForm"
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/et_EmailForm"
+        app:layout_constraintEnd_toEndOf="@+id/tv_Email_Title"
+        app:layout_constraintTop_toTopOf="@id/et_EmailForm" />
+
 
     <TextView
         android:id="@+id/tv_Password_Title"
         style="@style/TextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="36dp"
         android:gravity="start"
         android:text="@string/PasswordTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_Id" />
+        app:layout_constraintTop_toBottomOf="@id/et_Email" />
+
 
     <EditText
         android:id="@+id/et_Password"
@@ -81,20 +108,43 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/PasswordHint"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintEnd_toEndOf="@+id/tv_Password_Title"
+        app:layout_constraintStart_toStartOf="@+id/tv_Password_Title"
         app:layout_constraintTop_toBottomOf="@id/tv_Password_Title" />
 
+    <TextView
+        android:id="@+id/tv_ConfirmPassword_Title"
+        style="@style/TextStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:gravity="start"
+        android:text="@string/ConfirmPasswordTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_Password" />
+
+    <EditText
+        android:id="@+id/et_ConfirmPassword"
+        style="@style/EditTextStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/ConfirmPasswordHint"
+        app:layout_constraintEnd_toEndOf="@+id/tv_ConfirmPassword_Title"
+        app:layout_constraintStart_toStartOf="@+id/tv_ConfirmPassword_Title"
+        app:layout_constraintTop_toBottomOf="@id/tv_ConfirmPassword_Title" />
+
     <Button
+
         android:id="@+id/btn_SignUp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
         android:text="@string/signUpButton"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_Password"
+        app:layout_constraintTop_toBottomOf="@id/et_ConfirmPassword"
         app:layout_goneMarginTop="16dp" />
 
 
