--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -53,39 +53,38 @@
         app:layout_constraintTop_toBottomOf="@id/et_Id" />
 
     <EditText
-        app:layout_constraintHorizontal_weight="1"
         android:id="@+id/et_Email"
         style="@style/EditTextStyle"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@id/et_EmailForm"
         android:hint="@string/EmailHint"
         android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toStartOf="@id/et_EmailForm"
+        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="@+id/tv_Email_Title"
         app:layout_constraintTop_toBottomOf="@id/tv_Email_Title" />
 
     <EditText
-        app:layout_constraintEnd_toStartOf="@id/spinner"
         android:id="@+id/et_EmailForm"
         style="@style/EditTextStyle"
         android:layout_width="100dp"
-        app:layout_constraintHorizontal_weight="1"
         android:layout_height="wrap_content"
         android:hint="@string/EmailFormHint"
         android:inputType="textEmailAddress"
-        app:layout_constraintStart_toEndOf="@id/et_Email"
-        app:layout_constraintTop_toTopOf="@id/et_Email"
         app:layout_constraintBaseline_toBaselineOf="@id/et_Email"
-        />
+        app:layout_constraintEnd_toStartOf="@id/spinner"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toEndOf="@id/et_Email"
+        app:layout_constraintTop_toTopOf="@id/et_Email" />
 
     <Spinner
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toEndOf="@id/et_EmailForm"
         android:id="@+id/spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@id/et_EmailForm"
         app:layout_constraintEnd_toEndOf="@+id/tv_Email_Title"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toEndOf="@id/et_EmailForm"
         app:layout_constraintTop_toTopOf="@id/et_EmailForm" />
 
 
@@ -112,6 +111,19 @@
         app:layout_constraintEnd_toEndOf="@+id/tv_Password_Title"
         app:layout_constraintStart_toStartOf="@+id/tv_Password_Title"
         app:layout_constraintTop_toBottomOf="@id/tv_Password_Title" />
+
+    <TextView
+        android:id="@+id/tv_DescriptionPassword"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:alpha="0.7"
+        android:text="@string/passwordDescription"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/et_Password"
+        app:layout_constraintStart_toStartOf="@id/et_Password"
+        app:layout_constraintTop_toBottomOf="@id/et_Password" />
+
 
     <TextView
         android:id="@+id/tv_ConfirmPassword_Title"
